--- a/index.html
+++ b/index.html
@@ -165,55 +165,68 @@
 
     <section class="education" id="education">
         <h2 class="heading"> My<span> Education</span></h2>
-        <div class="timeline">
-            <div class="container right">
-                <div class="content">
-                    <div class="tag">
-                        <h2>University</h2>
-                    </div>
-                    <div class="desc"><br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis, repellat omnis nulla
-                            exercitationem quam error tempora alias nemo assumenda?</p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="container left">
-                <div class="content">
-                    <div class="tag">
-                        <h2>High School</h2>
+        <div class="container mt-3 text-center">
+            <div class="profile-header text-center">
+                <h2 class="name">Riwayat Pendidikan</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="CSS3.png" class="card-img-top history-img" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">SDN CITEREP</h5>
+                        </div>
                     </div>
-                    <div class="desc"><br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis, repellat omnis nulla
-                            exercitationem quam error tempora alias nemo assumenda?</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="assets/SMP.jpg" class="card-img-top history-img" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">SMPN 8 KOTA SERANG</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="assets/SMA.jpg" class="card-img-top history-img" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">SMAN 8 KOTA SERANG</h5>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="profile-header text-center">
+                <h2 class="name">Riwayat Organisasi</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="assets/MPK.png" class="card-img-top history-img" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">MPK SMAN 8 KOTA SERANG</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="assets/CC.png" class="card-img-top history-img" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">COMMPUTER COMMUNITY</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="assets/HUMANIKA.png" class="card-img-top history-img" alt="Project 1">
+                        <div class="card-body">
+                            <h5 class="card-title">HUMANIKA</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>    
 
-            <div class="container right">
-                <div class="content">
-                    <div class="tag">
-                        <h2>Junior High School</h2>
-                    </div>
-                    <div class="desc"><br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis, repellat omnis nulla
-                            exercitationem quam error tempora alias nemo assumenda?</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container left">
-                <div class="content">
-                    <div class="tag">
-                        <h2>Primary school</h2>
-                    </div>
-                    <div class="desc"><br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis, repellat omnis nulla
-                            exercitationem quam error tempora alias nemo assumenda?</p>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
 
     <section class="contact" id="contact">
