--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- bootsrap CSS CDN -->
+    <!-- Ini CDN bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     <header class="header">
+
         <nav class="navbar navbar-expand-lg fixing-top">
             <div class="container-fluid mx-3">
-                <a class="navbar-brand logo" style="font-weight: ;" href="#">Adhitiya</a>
+                <a class="navbar-brand logo" href="#">Adhitiya</a>
                 <button class="navbar-toggler ms-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
                         <a class="nav-link active" aria-current="page" href="#home">Home</a>
                         <a class="nav-link" href="#services">Services</a>
                         <a class="nav-link" href="#skills">Skills</a>
-                        <a class="nav-link" href="#education">Education</a>
+                        <a class="nav-link" href="#project">project</a>
                         <a class="nav-link" href="#contact">Contact</a>
                     </div>
                 </div>
@@ -46,14 +46,14 @@
         <div class="home-content">
             <h1>Hi It's <span>Adhitiya</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum, aliquam id, quas quam ipsa
-                reiciendis magni, exercitationem vitae porro provident quibusdam temporibus. Expedita nostrum architecto
-                minima natus voluptatum consequuntur cupiditate cum laboriosam deserunt voluptates, nesciunt, nobis rem
-                magni blanditiis similique ex amet, sunt aliquid vitae ipsum officia harum. Repellendus pariatur magnam
-                repellat asperiores unde dolorum consequatur quidem earum sequi nobis optio laboriosam assumenda, animi
-                quae. Neque voluptates dolore molestias facilis maiores ab perferendis. Perspiciatis, consectetur
-                laborum! Adipisci culpa aut neque delectus unde, iusto est sit totam optio fugiat praesentium, suscipit
-                quidem, nesciunt exercitationem voluptates modi. Consequatur eveniet animi culpa!</p>
+            <p style="font-weight:bold;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, veritatis
+                atque, reiciendis unde quo hic rerum delectus, laboriosam quas porro harum pariatur? Voluptatem eos
+                recusandae earum ad sequi iusto rem similique voluptas consequatur laborum dolores quos ullam mollitia
+                consectetur, ea cupiditate! Culpa, corporis excepturi ipsum ratione eveniet quaerat ut quis praesentium
+                voluptas consectetur. Vel optio eaque vitae praesentium libero assumenda. Nulla, incidunt. Neque debitis
+                ab atque? Non, sunt. Velit blanditiis laudantium rerum iusto voluptates ipsum, ipsa nihil suscipit a
+                illo. Quasi, aliquam, tenetur itaque accusamus repellat possimus soluta deleniti veniam repudiandae quod
+                animi ullam dolorem excepturi vel quia doloremque optio?</p>
 
             <div class="social-icon">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -74,46 +74,46 @@
             <div class="service-box">
                 <div class="service-info">
                     <h4>Graphic Designer</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae odio unde fugiat, nobis
-                        rerum harum odit laudantium maiores modi quisquam!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae odio unde fugiat, awesdsfc
+                        vrsrgr maiores modi quisquam!</p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
                     <h4>UI UX Design</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae odio unde fugiat, nobis
-                        rerum harum odit laudantium maiores modi quisquam!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. adhit cantik banget Repudiandae odio
+                        unde fugiat. </p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
                     <h4>Software Division Leader</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae odio unde fugiat, nobis
-                        rerum harum odit laudantium maiores modi quisquam!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit, adhit manis ad laudantium maiores modi
+                        quisquam!</p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Group leader in a big AI task project</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <h4> Group leader in a big AI task project</h4>
+                    <p>Lorem ipsum dolor, ang ang ang sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Attended insurance training
+                    <h4> Attended insurance training
                     </h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <p>Lorem ipsum dolor, sit amet aku anak baik dan suka jajan consectetur adipisicing elit. </p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Judge at a web competition festival</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <h4> Judge at a web competition festival</h4>
+                    <p>Lorem jamet premium nih bos ipsum dolor, sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
 
@@ -163,62 +163,46 @@
         </div>
     </section>
 
-    <section class="education" id="education">
-        <h2 class="heading"> My<span> Education</span></h2>
-        <div class="timeline">
-            <div class="container right">
-                <div class="content">
-                    <div class="tag">
-                        <h2>University</h2>
-                    </div>
-                    <div class="desc"><br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis, repellat omnis nulla
-                            exercitationem quam error tempora alias nemo assumenda?</p>
+    <section class="project">
+        <h2 class="heading"> My<span> project</span></h2>
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/project-1.png" class="d-block w-100" alt="img/project-1.png">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
                     </div>
                 </div>
-            </div>
-
-            <div class="container left">
-                <div class="content">
-                    <div class="tag">
-                        <h2>High School</h2>
-                    </div>
-                    <div class="desc"><br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis, repellat omnis nulla
-                            exercitationem quam error tempora alias nemo assumenda?</p>
-                    </div>
+                <div class="carousel-item">
+                    <img src="img/project-2.png" class="d-block w-100" alt="img/project-2.png">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/project-3.png" class="d-block w-100" alt="img/project-3.png">
                 </div>
             </div>
-
-            <div class="container right">
-                <div class="content">
-                    <div class="tag">
-                        <h2>Junior High School</h2>
-                    </div>
-                    <div class="desc"><br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis, repellat omnis nulla
-                            exercitationem quam error tempora alias nemo assumenda?</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container left">
-                <div class="content">
-                    <div class="tag">
-                        <h2>Primary school</h2>
-                    </div>
-                    <div class="desc"><br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis, repellat omnis nulla
-                            exercitationem quam error tempora alias nemo assumenda?</p>
-                    </div>
-                </div>
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </section>
 
     <section class="contact" id="contact">
-        <h2 class="heading">
-            Contact <span> Me</span>
+        <h2 class="heading">Contact <span> Me</span>
             <form action="">
                 <div class="input-box">
                     <input type="text" name="name" placeholder="Name" required>
@@ -232,6 +216,7 @@
         </h2>
     </section>
 
+
     <footer class="footer">
         <div class="social">
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -239,20 +224,23 @@
             <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
         </div>
-        <ul>
+        <ul class="list">
             <li><a href="#">FAQ</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Privacy Policies</a></li>
-            <p>© Adhitiya Ayu Puspitasari | All Right Reserved</p>
+            <li><a href="#">Privacy Policies</a></li><br>
+            <p class="copyright"> © Adhitiya Ayu Puspitasari | All Right Reserved</p>
         </ul>
     </footer>
+
+
+
+
 
     <!-- Wow animatiom -->
     <!-- <script src="script.js"></script> -->
 
-    <!-- bootsrap JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
