--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
     <!-- Ini CDN bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- AOS CDN CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
     <header class="header">
 
-        <nav class="navbar navbar-expand-lg fixing-top">
+        <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid mx-3">
-                <a class="navbar-brand logo" href="#">Adhitiya</a>
+                <a data-aos="fade-right" data-aos-duration="3000" class="navbar-brand logo" href="#">Amelia</a>
                 <button class="navbar-toggler ms-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div data-aos="fade-left" class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="#home">Home</a>
                         <a class="nav-link" href="#services">Services</a>
@@ -41,10 +44,10 @@
     <!-- intinya kalau mau bikin ini kita tulis section.home#home jadi titik buat class dan # buat id -->
     <section class="home" id="home">
         <div class="home-img">
-            <img src="img/poto aing.jpg" alt="">
+            <img data-aos="flip-left" data-aos-duration="2000" src="img/amel.JPG" alt="">
         </div>
         <div class="home-content">
-            <h1>Hi It's <span>Adhitiya</span></h1>
+            <h1 data-aos="flip-up">Hi It's <span>Amelia</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p style="font-weight:bold;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, veritatis
                 atque, reiciendis unde quo hic rerum delectus, laboriosam quas porro harum pariatur? Voluptatem eos
@@ -55,23 +58,23 @@
                 illo. Quasi, aliquam, tenetur itaque accusamus repellat possimus soluta deleniti veniam repudiandae quod
                 animi ullam dolorem excepturi vel quia doloremque optio?</p>
 
-            <div class="social-icon">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <div data-aos="zoom-in" class="social-icon">
+                <a href=""><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
 
-            <a href="#" class="btn">Hire Me</a>
+            <a data-aos="zoom-in" href="#" class="btn">Hire Me</a>
         </div>
     </section>
 
 
     <section class="services" id="services">
-        <h2 class="heading"> Services</h2>
+        <h2 data-aos="fade-up" class="heading"> Services</h2>
 
         <div class="services-container">
-            <div class="service-box">
+            <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
                     <h4>Graphic Designer</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae odio unde fugiat, awesdsfc
@@ -79,7 +82,7 @@
                 </div>
             </div>
 
-            <div class="service-box">
+            <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
                     <h4>UI UX Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. adhit cantik banget Repudiandae odio
@@ -87,22 +90,22 @@
                 </div>
             </div>
 
-            <div class="service-box">
+            <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
-                    <h4>Software Division Leader</h4>
+                    <h4>Front End Developer</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit, adhit manis ad laudantium maiores modi
                         quisquam!</p>
                 </div>
             </div>
 
-            <div class="service-box">
+            <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
                     <h4> Group leader in a big AI task project</h4>
                     <p>Lorem ipsum dolor, ang ang ang sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
 
-            <div class="service-box">
+            <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
                     <h4> Attended insurance training
                     </h4>
@@ -110,7 +113,7 @@
                 </div>
             </div>
 
-            <div class="service-box">
+            <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
                     <h4> Judge at a web competition festival</h4>
                     <p>Lorem jamet premium nih bos ipsum dolor, sit amet consectetur adipisicing elit. </p>
@@ -121,39 +124,39 @@
     </section>
 
     <section class="skills" id="skills">
-        <h2 class="heading"> Skills</h2>
+        <h2 data-aos="fade-up" class="heading"> Skills</h2>
 
         <div class="container">
             <div class="row" id="skillsContainer">
-                <div class="bar">
+                <div data-aos="fade-right" class="bar">
                     <div class="info">
                         <img src="img/figma23.png">
                         <span>Figma</span>
                     </div>
                 </div>
 
-                <div class="bar animate_animated animate_zoomIn animate_delay-2s">
+                <div data-aos="fade-left" class="bar animate_animated animate_zoomIn animate_delay-2s">
                     <div class="info">
                         <img src="img/html3.png">
                         <span>HTML</span>
                     </div>
                 </div>
 
-                <div class="bar animate_animated animate_zoomIn animate_delay-2s">
+                <div data-aos="fade-right" class="bar animate_animated animate_zoomIn animate_delay-2s">
                     <div class="info">
                         <img src="img/CSS3.png">
                         <span>CSS</span>
                     </div>
                 </div>
 
-                <div class="bar animate_animated animate_zoomIn animate_delay-2s">
+                <div data-aos="fade-left" class="bar animate_animated animate_zoomIn animate_delay-2s">
                     <div class="info">
                         <img src="img/VB2.jpg">
                         <span> Visual Basic</span>
                     </div>
                 </div>
 
-                <div class="bar animate_animated animate_zoomIn animate_delay-2s">
+                <div data-aos="fade-right" class="bar animate_animated animate_zoomIn animate_delay-2s">
                     <div class="info">
                         <img src="img/bootstrap1.jpg">
                         <span> Bootstrap</span>
@@ -164,8 +167,8 @@
     </section>
 
     <section class="project">
-        <h2 class="heading"> My<span> project</span></h2>
-        <div id="carouselExampleIndicators" class="carousel slide">
+        <h2 data-aos="fade-up" class="heading"> My<span> project</span></h2>
+        <div data-aos="zoom-in-down" id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -202,7 +205,7 @@
     </section>
 
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span> Me</span>
+        <h2 data-aos="fade-up" class="heading">Contact <span> Me</span>
             <form action="">
                 <div class="input-box">
                     <input type="text" name="name" placeholder="Name" required>
@@ -211,15 +214,15 @@
                     <input type="text" placeholder="Subject" required>
                 </div>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-                <input type="submit" value="Send Message" class="btn">
+                <input data-aos="fade-right" type="submit" value="Send Message" class="btn">
             </form>
         </h2>
     </section>
 
 
     <footer class="footer">
-        <div class="social">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <div data-aos="fade-up" class="social">
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
             <a href="#"><i class="fa-brands fa-github"></i></a>
             <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
@@ -230,20 +233,20 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Privacy Policies</a></li><br>
-            <p class="copyright"> © Adhitiya Ayu Puspitasari | All Right Reserved</p>
+            <p class="copyright"> © Amelia | All Right Reserved</p>
         </ul>
     </footer>
 
-
-
-
-
-    <!-- Wow animatiom -->
-    <!-- <script src="script.js"></script> -->
-
+    <!-- BOOTSRAP CDN for js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <!-- AOS CDN for js -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
