--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid mx-3">
-                <a data-aos="fade-right" data-aos-duration="3000" class="navbar-brand logo" href="#">Amelia</a>
+                <a data-aos="fade-right" class="navbar-brand logo" href="#">Amelia</a>
                 <button class="navbar-toggler ms-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -31,7 +31,6 @@
                 </button>
                 <div data-aos="fade-left" class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
                         <a class="nav-link" href="#services">Services</a>
                         <a class="nav-link" href="#skills">Skills</a>
                         <a class="nav-link" href="#project">project</a>
@@ -49,20 +48,23 @@
         <div class="home-content">
             <h1 data-aos="flip-up">Hi It's <span>Amelia</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
-            <p style="font-weight:bold;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, veritatis
-                atque, reiciendis unde quo hic rerum delectus, laboriosam quas porro harum pariatur? Voluptatem eos
-                recusandae earum ad sequi iusto rem similique voluptas consequatur laborum dolores quos ullam mollitia
-                consectetur, ea cupiditate! Culpa, corporis excepturi ipsum ratione eveniet quaerat ut quis praesentium
-                voluptas consectetur. Vel optio eaque vitae praesentium libero assumenda. Nulla, incidunt. Neque debitis
-                ab atque? Non, sunt. Velit blanditiis laudantium rerum iusto voluptates ipsum, ipsa nihil suscipit a
-                illo. Quasi, aliquam, tenetur itaque accusamus repellat possimus soluta deleniti veniam repudiandae quod
-                animi ullam dolorem excepturi vel quia doloremque optio?</p>
+            <p style="font-weight:bold;">Nama saya Amelia Akhila Aqna, seorang mahasiswa semester 6 Teknik Informatika
+                di Universitas Banten Jaya yang memiliki minat besar dalam
+                pengembangan web, khususnya di bidang front end development. Saya telah mengembangkan keterampilan dalam
+                HTML, CSS, dan
+                JavaScript, serta berpengalaman menggunakan framework seperti React dan Vue.js. Selain itu, saya senang
+                menciptakan
+                antarmuka pengguna yang menarik dan responsif, serta memastikan pengalaman pengguna yang optimal. Dengan
+                semangat untuk
+                terus belajar dan berinovasi, saya berharap dapat berkontribusi dalam proyek-proyek yang menantang dan
+                berkembang dalam
+                dunia teknologi.</p>
 
             <div data-aos="zoom-in" class="social-icon">
-                <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/amelia-akhila-05339622a/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/ameliaakhila"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/ameliaa.o_c/"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://x.com/amelia_akhila"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
 
             <a data-aos="zoom-in" href="#" class="btn">Hire Me</a>
@@ -77,48 +79,57 @@
             <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
                     <h4>Graphic Designer</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae odio unde fugiat, awesdsfc
-                        vrsrgr maiores modi quisquam!</p>
+                    <p>Saya menciptakan desain visual yang menarik dan efektif untuk berbagai media, mulai dari logo
+                        hingga materi
+                        pemasaran, dengan fokus pada identitas merek yang kuat.</p>
                 </div>
             </div>
 
             <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
                     <h4>UI UX Design</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. adhit cantik banget Repudiandae odio
-                        unde fugiat. </p>
+                    <p>Saya merancang antarmuka pengguna yang intuitif dan pengalaman pengguna yang menyenangkan,
+                        memastikan bahwa setiap
+                        interaksi dengan produk digital terasa mulus dan memuaskan.</p>
                 </div>
             </div>
 
             <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
                     <h4>Front End Developer</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit, adhit manis ad laudantium maiores modi
-                        quisquam!</p>
+                    <p>Saya mengembangkan aplikasi web yang responsif dan interaktif menggunakan teknologi modern
+                        seperti HTML, CSS, dan
+                        JavaScript, dengan fokus pada performa dan aksesibilitas.</p>
                 </div>
             </div>
 
             <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
-                    <h4> Group leader in a big AI task project</h4>
-                    <p>Lorem ipsum dolor, ang ang ang sit amet consectetur adipisicing elit. </p>
+                    <h4>Group Leader in a Big AI Task Project</h4>
+                    <p>Saya memimpin tim dalam proyek besar yang berfokus pada pengembangan solusi berbasis kecerdasan
+                        buatan,
+                        mengkoordinasikan tugas dan memastikan pencapaian tujuan proyek.</p>
                 </div>
             </div>
 
             <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
-                    <h4> Attended insurance training
-                    </h4>
-                    <p>Lorem ipsum dolor, sit amet aku anak baik dan suka jajan consectetur adipisicing elit. </p>
+                    <h4>Attended Insurance Training</h4>
+                    <p>Saya mengikuti pelatihan asuransi untuk memahami lebih dalam tentang produk dan layanan asuransi,
+                        serta cara
+                        terbaik untuk memberikan solusi kepada klien.</p>
                 </div>
             </div>
 
             <div data-aos="fade-up" class="service-box">
                 <div class="service-info">
-                    <h4> Judge at a web competition festival</h4>
-                    <p>Lorem jamet premium nih bos ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <h4>Judge at a Web Competition Festival</h4>
+                    <p>Saya berperan sebagai juri dalam festival kompetisi web, menilai inovasi dan kreativitas peserta
+                        dalam
+                        menciptakan solusi digital yang menarik dan fungsional.</p>
                 </div>
             </div>
+
 
         </div>
     </section>
@@ -130,42 +141,84 @@
             <div class="row" id="skillsContainer">
                 <div data-aos="fade-right" class="bar">
                     <div class="info">
-                        <img src="img/figma23.png">
+                        <i class="fa-brands fa-figma"></i>
                         <span>Figma</span>
                     </div>
                 </div>
 
                 <div data-aos="fade-left" class="bar animate_animated animate_zoomIn animate_delay-2s">
                     <div class="info">
-                        <img src="img/html3.png">
+                        <i class="fa-brands fa-html5"></i>
                         <span>HTML</span>
                     </div>
                 </div>
 
                 <div data-aos="fade-right" class="bar animate_animated animate_zoomIn animate_delay-2s">
                     <div class="info">
-                        <img src="img/CSS3.png">
+                        <i class="fa-brands fa-css3-alt"></i>
                         <span>CSS</span>
                     </div>
                 </div>
 
                 <div data-aos="fade-left" class="bar animate_animated animate_zoomIn animate_delay-2s">
                     <div class="info">
-                        <img src="img/VB2.jpg">
-                        <span> Visual Basic</span>
+                        <i class="fa-brands fa-js"></i>
+                        <span> Javascript</span>
                     </div>
                 </div>
 
                 <div data-aos="fade-right" class="bar animate_animated animate_zoomIn animate_delay-2s">
                     <div class="info">
-                        <img src="img/bootstrap1.jpg">
+                        <i class="fa-brands fa-bootstrap"></i>
                         <span> Bootstrap</span>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-  
+
+    <section class="project">
+        <h2 data-aos="fade-up" class="heading"> My<span> project</span></h2>
+        <div data-aos="zoom-in-down" id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/project-1.png" class="d-block w-100" alt="img/project-1.png">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>ApoteKu</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/project-2.png" class="d-block w-100" alt="img/project-2.png">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>AbsensiKuy</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/project-3.png" class="d-block w-100" alt="img/project-3.png">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Sistem Apotek Kencana</h5>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </section>
 
     <section class="contact" id="contact">
@@ -186,10 +239,10 @@
 
     <footer class="footer">
         <div data-aos="fade-up" class="social">
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/amelia-akhila-05339622a/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/ameliaakhila"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.instagram.com/ameliaa.o_c/"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://x.com/amelia_akhila"><i class="fa-brands fa-x-twitter"></i></a>
         </div>
         <ul class="list">
             <li><a href="#">FAQ</a></li>
@@ -197,7 +250,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Privacy Policies</a></li><br>
-            <p class="copyright"> © Amelia | All Right Reserved</p>
+            <p class="copyright"> © Amelia Cantik | All Right Reserved</p>
         </ul>
     </footer>
 
