--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <a href="https://x.com/amelia_akhila"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
 
-            <a data-aos="zoom-in" href="#" class="btn">Hire Me</a>
+            <a data-aos="zoom-in" href="https://wa.me/6288191375357?Hallo%20Amel%20Cantik" class="btn">Hire Me</a>
         </div>
     </section>
 
